--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0 auto;
+            margin: 20px auto;
           background-image: linear-gradient(90deg, #00FFFF, #B3FFFF, #B3FFFF, #B3FFFF, #B3FFFF, #B3FFFF, #B3FFFF, #B3FFFF, #B3FFFF, #B3FFFF, #00FFFF);            backdrop-filter: blur(5px);
             align-items: center;
             justify-items: center;
