--- a/css/resume.css
+++ b/css/resume.css
@@ -15,7 +15,8 @@
         }
         .container {
           align-items: center;
-            margin: 20px;
+            margin: 20px auto;
+            width: 90%;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
