--- a/css/projects.css
+++ b/css/projects.css
@@ -117,7 +117,7 @@
     color: black;
     text-align: center;
     border: 2px solid white;
-    background: linear-gradient(0deg, red,white,red);
+    background: linear-gradient(0deg, #ff6f61,white,#ff6f61);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.7);
     border-radius: 6px;
     padding: 2px 0;
@@ -153,6 +153,7 @@ i{
         fieldset {
             border: 3px solid black;
             padding: 10px 20px;
+            background-image: linear-gradient(180deg, gray,white,white,white, white, white, white, white, white, gray);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
             border-radius: 10px;
             width:90%;
