--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
             margin: 20px auto;
             padding: 20px;
             border-radius: 10px;
+            background-image: linear-gradient(180deg, gray,white,white,white,white, white, white, white, white, white, gray);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
             position: static;
             border: 3px solid black;
@@ -188,7 +189,7 @@
     color: black;
     text-align: center;
     border: 2px solid white;
-    background: linear-gradient(0deg, red,white,red);
+    background: linear-gradient(0deg, #ff6f61,white,#ff6f61);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.7);
     border-radius: 6px;
     padding: 2px 0;
