--- a/css/resume.css
+++ b/css/resume.css
@@ -64,6 +64,7 @@
             border-radius: 50%;
             margin-right: 0px;
             border: 2px solid black;
+            filter: drop-shadow(-10px 10px 10px rgba(0,255,255,0.9));
         }
         .header .info {
             flex-grow: 1;
