--- a/css/achievements.css
+++ b/css/achievements.css
@@ -36,8 +36,8 @@
         .button-container {
           color: white;
             position: absolute;
-            right: 51%;
-            transform: translateX(-50%); /* Offset the circle to be centered */
+            right: 52%;
+            transform: translateX(-50%,-50%); /* Offset the circle to be centered */
             /* Position it halfway above the navbar */
             z-index: 999; /* Ensure it is above the navbar */
         }
