--- a/css/achievements.css
+++ b/css/achievements.css
@@ -37,8 +37,8 @@
             color: white;
             position: absolute;
             top:50%;
-            right: 50%;
-            transform: translateX(-50%,-50%); /* Offset the circle to be centered */
+            right: 52%;
+            transform: translate(-50%,-50%); /* Offset the circle to be centered */
             /* Position it halfway above the navbar */
             z-index: 999; /* Ensure it is above the navbar */
         }
