--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@
             position: absolute;
             top:50%;
             right: 52%;
-            transform: translateX(-50%,-50%); /* Offset the circle to be centered */
+            transform: translate(-50%,-50%); /* Offset the circle to be centered */
             /* Position it halfway above the navbar */
             z-index: 999; /* Ensure it is above the navbar */
         }
