--- a/css/projects.css
+++ b/css/projects.css
@@ -14,6 +14,53 @@
             width: 100%;
         }
 
+        /* For small devices like smartphones (portrait mode, less than 600px) */
+@media only screen and (max-width: 600px) {
+    body {
+      padding: 10px;
+      background-color: #e0f7fa;
+    }
+  }
+  
+  /* For medium devices like tablets (600px to 768px) */
+  @media only screen and (min-width: 600px) and (max-width: 768px) {
+    body {
+      padding: 15px;
+      max-width: 95%;
+      margin: 0 auto;
+      background-color: #ffecb3;
+    }
+  }
+  
+  /* For tablets in landscape mode and small laptops (768px to 1024px) */
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    body {
+      padding: 20px;
+      max-width: 90%;
+      margin: 0 auto;
+      background-color: #dcedc8;
+    }
+  }
+  
+  /* For laptops and desktops (1024px to 1200px) */
+  @media only screen and (min-width: 1024px) and (max-width: 1200px) {
+    body {
+      padding: 25px;
+      max-width: 85%;
+      margin: 0 auto;
+      background-color: #ffcdd2;
+    }
+  }
+  
+  /* For large screens (more than 1200px) */
+  @media only screen and (min-width: 1200px) {
+    body {
+      padding: 30px;
+      max-width: 80%;
+      margin: 0 auto;
+      background-color: #c5cae9;
+    }
+  }
         
         /*nav bar*/
         .navbar{
