--- a/css/projects.css
+++ b/css/projects.css
@@ -92,7 +92,7 @@
             width: 16px;
             height: 16px;
             border-radius: 50%;
-            background-color: #ff6f61;
+            background-color: red;
             pointer-events: none;
             opacity: 0.7;
         }
