--- a/css/achievements.css
+++ b/css/achievements.css
@@ -1,6 +1,6 @@
 *{
   box-sizing: border-box;
-  cursor: pointer;
+  cursor: default;
 }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
