--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 /* General Styles */
 * {
   box-sizing: border-box;
-  cursor: pointer;
+  cursor: default;
 }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
